--- a/process/threads/concurrence.ipynb
+++ b/process/threads/concurrence.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: psutil in /home/alvaro/Desktop/CURSOS FOM/OS_Python/.venv/lib/python3.11/site-packages (5.9.8)\n"
+      "Requirement already satisfied: psutil in /home/alvaro/Desktop/OS/OS-python/.venv/lib/python3.10/site-packages (5.9.8)\n"
      ]
     }
    ],
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU Usage: 5.7%\n"
+      "CPU Usage: 9.2%\n"
      ]
     }
    ],
@@ -44,8 +44,7 @@
     "    return psutil.cpu_percent(interval=1)\n",
     "\n",
     "cpu_usage = get_cpu_usage()\n",
-    "print(f\"CPU Usage: {cpu_usage}%\")\n",
-    "    "
+    "print(f\"CPU Usage: {cpu_usage}%\")  "
    ]
   },
   {
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +64,7 @@
      "output_type": "stream",
      "text": [
       "Number of elements 999\n",
-      "Time execution 5.078315734863281e-05 Total 499500\n"
+      "Time execution 3.743171691894531e-05 Total 499500\n"
      ]
     }
    ],
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "Number of elements 999\n",
-      "Time execution 0.0005691051483154297 Total 499500\n"
+      "Time execution 0.0002033710479736328 Total 499500\n"
      ]
     }
    ],
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +107,7 @@
      "output_type": "stream",
      "text": [
       "Number of elements 99999999\n",
-      "Time execution 5.498467922210693 Total 4999999950000000\n"
+      "Time execution 3.511298656463623 Total 4999999950000000\n"
      ]
     }
    ],
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "Number of elements 99999999\n",
-      "Time execution 1.4590089321136475 Total 4999999950000000\n"
+      "Time execution 1.0303051471710205 Total 4999999950000000\n"
      ]
     }
    ],
@@ -151,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
